--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,21 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@metamask/detect-provider": "^1.2.0",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.1",
+    "cryptocompare": "^1.0.0",
+    "ethers": "^5.4.7",
+    "material-ui": "^0.20.2",
+    "mui": "^0.0.1",
+    "react-alert": "^7.0.3",
+    "react-router-dom": "^6.0.1",
+    "web3": "1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
