--- a/client/package.json
+++ b/client/package.json
@@ -1,51 +1,25 @@
 {
   "name": "client",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
+    "@metamask/detect-provider": "^1.2.0",
+    "ethers": "^5.6.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^4.12.3",
-    "@metamask/detect-provider": "^1.2.0",
-    "@mui/icons-material": "^5.4.2",
-    "@mui/material": "^5.4.1",
-    "cryptocompare": "^1.0.0",
-    "ethers": "^5.4.7",
-    "material-ui": "^0.20.2",
-    "mui": "^0.0.1",
-    "react-alert": "^7.0.3",
-    "react-router-dom": "^6.0.1",
-    "web3": "1.2.2"
+    "typescript": "^4.6.3"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.6",
+    "@types/react-dom": "^18.0.2",
+    "parcel": "^2.5.0",
+    "parcel-bundler": "^1.12.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "parcel src/index.html"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    "since 2017-06"
+  ]
 }
